--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Controle de Estoque Moderno</title>
-    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2c6e49">
+    <title>Sistema de Estoque PWA</title>
     <link rel="icon" type="image/png" href="https://img.icons8.com/plasticine/100/box--v1.png">
+    <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.sheetjs.com/xlsx-0.20.1/package/dist/xlsx.full.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -22,45 +23,59 @@
         </div>
         <div class="footer">
             <p>&copy; 2025 Victor Gustavo Santin</p>
-            <div class="social-links">
-                <a href="https://github.com/VictorNere" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/victorgustavosantin/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.instagram.com/vgs_informatica_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://wa.me/54981661623" target="_blank" class="whatsapp-icon"><i class="fa-brands fa-whatsapp"></i></a>
-            </div>
+            <a href="https://wa.me/54981661623" target="_blank" rel="noopener noreferrer" class="whatsapp-icon">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
         </div>
     </div>
     <div id="toast-container"></div>
-    <div class="modal-overlay" id="modal-overlay">
-        <div class="modal-content" id="modal-content-host"></div>
-    </div>
+    <button id="dashboard-fab"><i class="fa-solid fa-chart-pie"></i></button>
+    <div class="modal-overlay" id="modal-overlay"><div class="modal-content" id="modal-content-host"></div></div>
 
     <template id="template-adicionar">
-        <div class="modal-header"><h2>Adicionar Novo Item</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <div class="modal-header"><h2>Novo Item</h2><button class="close-button" onclick="closeModal()">×</button></div>
         <form id="form-adicionar-item">
-            <div class="form-group"><label for="categoria">Categoria</label><select id="categoria" required><option value="">-- Escolha --</option><option value="HDD">HDD</option><option value="Memória RAM NB">Memória RAM NB</option><option value="Memória RAM PC">Memória RAM PC</option><option value="Placa Vídeo / GPU">Placa Vídeo / GPU</option><option value="SSD M2">SSD M2</option><option value="SSD Sata">SSD Sata</option><option value="Processador">Processador</option><option value="Placa Mãe">Placa Mãe</option><option value="Telefonia Móvel">Telefonia Móvel</option><option value="Equipamento Completo">Equipamento Completo</option><option value="Infraestrutura">Infraestrutura</option><option value="Fonte / PSU">Fonte / PSU</option><option value="Periférico">Periférico</option><option value="Telefonia">Telefonia</option><option value="Suprimento">Suprimento</option><option value="Outros">Outros</option></select></div>
-            <div class="form-group"><label for="identificacao">Identificação</label><input type="text" id="identificacao" required></div>
-            <div class="form-group"><label for="quantidade">Quantidade</label><input type="number" id="quantidade" value="1" min="1" required></div>
-            <div class="form-group"><label for="data">Data de Entrada</label><input type="date" id="data" required></div>
-            <div class="form-group patrimonio-group"><label>Possui Patrimônio?</label><div class="radio-options"><input type="radio" id="patrimonio-nao" name="possui-patrimonio" value="nao" checked><label for="patrimonio-nao">Não</label><input type="radio" id="patrimonio-sim" name="possui-patrimonio" value="sim"><label for="patrimonio-sim">Sim</label></div></div>
-            <div id="patrimonio-input-container" class="form-group" style="display:none;"><label for="patrimonio-numero">Número do Patrimônio</label><input type="text" id="patrimonio-numero"></div>
-            <div class="form-group"><label for="observacao">Observação</label><textarea id="observacao"></textarea></div>
-            <div class="form-actions"><button type="submit" id="btn-salvar-fechar" class="submit-btn">Salvar e Fechar</button><button type="button" id="btn-salvar-outro" class="secondary-btn">Salvar e Adicionar Outro</button></div>
+            <div class="form-group"><label>Categoria</label><select id="categoria" required><option value="HDD">HDD</option><option value="Memória RAM NB">Memória RAM NB</option><option value="Memória RAM PC">Memória RAM PC</option><option value="Placa Vídeo / GPU">Placa Vídeo / GPU</option><option value="SSD M2">SSD M2</option><option value="SSD Sata">SSD Sata</option><option value="Processador">Processador</option><option value="Placa Mãe">Placa Mãe</option><option value="Telefonia Móvel">Telefonia Móvel</option><option value="Equipamento Completo">Equipamento Completo</option><option value="Infraestrutura">Infraestrutura</option><option value="Fonte / PSU">Fonte / PSU</option><option value="Periférico">Periférico</option><option value="Telefonia">Telefonia</option><option value="Suprimento">Suprimento</option><option value="Outros">Outros</option></select></div>
+            <div class="form-group"><label>Identificação</label><input type="text" id="identificacao" required></div>
+            <div class="form-group"><label>Quantidade</label><input type="number" id="quantidade" value="1" min="1" required></div>
+            <div class="form-group"><label>Data</label><input type="date" id="data" required></div>
+            <div class="form-group patrimonio-group"><label>Patrimônio?</label><div class="radio-options"><input type="radio" id="p-nao" name="p" value="nao" checked><label for="p-nao">Não</label><input type="radio" id="p-sim" name="p" value="sim"><label for="p-sim">Sim</label></div></div>
+            <div id="pat-input-container" class="form-group" style="display:none;"><label>Número do Patrimônio</label><input type="text" id="patrimonio-numero"></div>
+            <div class="form-group"><label>Observação</label><textarea id="observacao"></textarea></div>
+            <div class="form-actions"><button type="submit" class="submit-btn">Salvar</button></div>
         </form>
     </template>
 
     <template id="template-estoque">
         <div class="modal-header"><h2>Estoque Atual</h2><button class="close-button" onclick="closeModal()">×</button></div>
-        <div class="filtros-container"><div class="filtro-item"><input type="text" id="filtro-texto" placeholder="Buscar por identificação ou categoria..."></div></div>
-        <table class="tabela-estoque"><thead><tr><th>Categoria</th><th>Identificação</th><th>Qtd.</th><th>Patrimônio</th><th>Ações</th></tr></thead><tbody id="corpo-tabela-estoque"></tbody></table>
+        <div class="filtros-container"><div class="filtro-item"><input type="text" id="filtro-texto" placeholder="Filtrar..."></div></div>
+        <table class="tabela-estoque"><thead><tr><th>Categoria</th><th>Item</th><th>Qtd.</th><th>Patr.</th><th>Ações</th></tr></thead><tbody id="corpo-tabela-estoque"></tbody></table>
     </template>
 
     <template id="template-relatorio">
-        <div class="modal-header report-header"><h2>Relatório de Movimentação</h2><button class="close-button" onclick="closeModal()">×</button></div>
-        <div class="report-summary"><div class="summary-card"><h3>Itens Totais</h3><p id="total-items-summary">0</p></div><div class="summary-card"><h3>Movimentos</h3><p id="total-moves-summary">0</p></div></div>
-        <table id="log-table"><thead><tr><th>Data</th><th>Tipo</th><th>Item</th><th>Qtd.</th><th>Obs.</th></tr></thead><tbody id="corpo-tabela-log"></tbody></table>
+        <div class="modal-header report-header"><h2>Movimentações</h2><div class="report-actions"><button class="action-btn" onclick="exportarXLSX()">Exportar XLSX</button></div><button class="close-button" onclick="closeModal()">×</button></div>
+        <table id="log-table"><thead><tr><th>Data</th><th>Tipo</th><th>Categoria</th><th>Item</th><th>Qtd.</th></tr></thead><tbody id="corpo-tabela-log"></tbody></table>
     </template>
 
-    <script type="module" src="script.js"></script>
+    <template id="template-dashboard">
+        <div class="modal-header"><h2 id="dashboard-title">Dashboard</h2><button class="close-button" onclick="closeModal()">×</button></div>
+        <div id="dashboard-content"></div>
+        <template id="sub-template-dashboard-menu">
+            <div class="dashboard-menu">
+                <button class="chart-select-btn" onclick="showChart('comparacaoItemTotal')">Estoque Total vs Item</button>
+                <button class="chart-select-btn" onclick="showChart('movimentacaoItem')">Histórico de Item</button>
+                <button class="chart-select-btn" onclick="showChart('movimentosPeriodo')">Movimentos por Período</button>
+            </div>
+        </template>
+        <template id="sub-template-chart-view">
+            <button class="action-btn backup back-to-menu-btn" onclick="showDashboardMenu()">← Voltar</button>
+            <div class="chart-container">
+                <div id="chart-controls" class="filtros-container"></div>
+                <canvas id="main-chart-canvas"></canvas>
+            </div>
+        </template>
+    </template>
+
+    <script src="script.js"></script>
 </body>
 </html>
